fix Disclaimers alignment on Natural Language Quote

--- a/resources/css/olc.css
+++ b/resources/css/olc.css
@@ -980,7 +980,7 @@ body {
         font-size: 10px;
         line-height: 1;
         position: absolute;
-        top: 34px;
+        top: 11px;
         right: 9px;
         content: '\f078';
         pointer-events: none; }
@@ -1705,6 +1705,33 @@ body {
                   padding: 8px; } }
               body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 form div.text-center input[type='button']:hover {
                 opacity: 1; }
+          body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 div#disclaimers {
+            float: none;
+            width: 100%;
+            max-width: 590px;
+            margin: 0 auto 75px;
+            padding: 0; }
+            @media (max-width: 830px) {
+              body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 div#disclaimers {
+                max-width: 500px;
+                margin: 0 auto 50px; } }
+            body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 div#disclaimers h4 {
+              font-size: 17px;
+              font-weight: 700;
+              margin: 0 0 15px;
+              text-align: left;
+              color: #333; }
+            body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 div#disclaimers p {
+              font-size: 14px;
+              font-weight: 300;
+              display: inline-block;
+              margin-bottom: 10px;
+              cursor: pointer; }
+              body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 div#disclaimers p:last-of-type {
+                margin-bottom: 0; }
+              @media (max-width: 768px) {
+                body div.background-wrap#quote_form_natlang section.quote div.container div.row div.col-md-12 div#disclaimers p {
+                  font-size: 11px; } }
   body div.background-wrap#calculator section.quote div.container div.row div.col-md-12 form {
     float: none;
     width: 100%;
@@ -2844,39 +2871,3 @@ body {
                 body footer div.container div.row div.col-md-12 ul li a:hover, body footer div.container div.row div.col-md-12 ul li a.active {
                   color: white;
                   border-bottom: 1px solid white; }
- 
- .error-text {
- color : #ff3e3e !important;
- padding: 9px 0 9px 9px;
- }     
- 
- span .error-text {
- color : #ff3e3e !important;
- padding-left: 0px;
- }         
- 
- .success-text{color:#2ecc71}                  
- 
- #contact-time-zone{
-    width: 466px;
-    padding: 8px;
-    font-size: 16px;
- }
- 
-.required:before {
-	content: "*";
-	position: relative;
-	left: -8px;
-	color: #ff3e3e;
-	top: 3px
-}
-/* .inline-select {
-	display: inline-block;
-	position: relative
-} */
-#astrik-home{
-	text-align: left;
-    padding-left: 250px;
-    font-size: small;
-    height: 10px;
-} 
